[package]
name = "unison"
version = "0.1.0"
authors = ["Kang Seonghoon <public+git@mearie.org>"]
license = "MIT"

build = "build.rs"

[dependencies]
serde = "1.0.8"
serde_derive = "1.0.8"
serde_json = "1.0.2"
errln = "0.1.0"
rayon = "0.7.1"
base64 = "0.5.0"
gif = "0.9.1"
lazy_static = "0.2.8"
rmp = "0.8.6"
unicode-normalization = "0.1.3"
md5 = "0.3.4"
fpa = "0.1.0"
cast = "0.2.0"
console = "0.4.2"
indicatif = "0.6.0"

[build-dependencies]
rmp = "0.8.6"
zip = { version = "0.2.3", default-features = false }
xml-rs = "0.6.0"

[profile.dev]
opt-level = 1

